--- a/app/index.html
+++ b/app/index.html
@@ -2,12 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Golden</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
+    <header>
+        <div class="wrapper">
+            <div class="top">
+                <a href="#"><img class="top__logo" src="../img/logo.png" alt=""></a>
+                <ul class="top__menu">
+                    <li class="top__logo__items"><a href="#">Home</a></li>
+                    <li class="top__logo__items"><a href="#">Services</a></li>
+                    <li class="top__logo__items"><a href="#">Portfolio</a></li>
+                    <li class="top__logo__items"><a href="#">About</a></li>
+                    <li class="top__logo__items"><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="welcome">
+                <p class="welcome__studio">Welcome to our studio</p>
+                <p class="welcome__nice">it's nice to meet you</p>
+                <a href="#" class="btn">tell me more</a>
+            </div>
+        </div>
+    </header>
     <div class="wrapper">
-        Hello World
+
     </div>
 </body>
 </html>
