--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/normalize.css">
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <div class="wrapper">
             <div class="top">
                 <a href="#"><img class="top__logo" src="../img/logo.png" alt=""></a>
@@ -27,7 +27,62 @@
         </div>
     </header>
     <div class="wrapper">
-
-    </div>
+        <section class="services clear-fix">
+            <p class="title">
+                Services
+            </p>
+            <p class="text">
+                Proin iaculis purus consequat sem cure
+            </p>
+            <div class="services-item">
+                <img class="services-item__img" src="../img/icon1.png" alt="">
+                <p class="services-item__title">
+                    E-commers
+                </p>
+                <p class="services-item__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid commodi laudantium modi natus nisi non quas quia quod rem,
+                </p>
+            </div>
+            <div class="services-item">
+                <img class="services-item__img" src="../img/icon2.png" alt="">
+                <p class="services-item__title">
+                    E-commers
+                </p>
+                <p class="services-item__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid commodi laudantium modi natus nisi non quas quia quod rem,
+                </p>
+            </div>
+            <div class="services-item">
+                <img class="services-item__img" src="../img/icon3.png" alt="">
+                <p class="services-item__title">
+                    E-commers
+                </p>
+                <p class="services-item__text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid commodi laudantium modi natus nisi non quas quia quod rem,
+                </p>
+            </div>
+        </section>
+        </div>
+        <div class="portfolio">
+            <div class="wrapper clear-fix">
+                <div class="title">
+                    our portfolio
+                </div>
+                <p class="text">
+                    Proin iaculis purus consequat sem cure
+                </p>
+                <div class="portfolio-img clear-fix">
+                    <div class="portfolio-img__item">
+                        <img src="img/img1.jpg" alt="">
+                    </div>
+                    <div class="portfolio-img__item">
+                        <img src="img/img2.jpg" alt="">
+                    </div>
+                    <div class="portfolio-img__item">
+                        <img src="img/img3.jpg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
