--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
                     <div class="portfolio-img__item">
                         <img src="img/img3.jpg" alt="">
                     </div>
+                    test git
                 </div>
             </div>
         </div>
