--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,7 @@
             </div>
         </section>
         </div>
-        <div class="portfolio">
+    <div class="portfolio">
             <div class="wrapper clear-fix">
                 <div class="title">
                     our portfolio
@@ -81,9 +81,72 @@
                     <div class="portfolio-img__item">
                         <img src="img/img3.jpg" alt="">
                     </div>
-                    test git
+
                 </div>
             </div>
         </div>
+    <section class="about">
+        <div class="wrapper">
+            <div class="">
+                <p class="title">
+                    About us
+                </p>
+                <p class="text">
+                    Proin iaculis purus consequat sem cure
+                </p>
+            </div>
+            <div class="right month padding-right">
+                <img class="month__img--right" src="img/about1.jpg" alt="">
+                <div class="month__title right">
+                    July 2010
+                </div>
+                <div class="month__under-title right">Our Humble Beginnings</div>
+                <div class="month__text right">Proin iaculis purus consequat sem cure
+                    digni ssim. Donec porttitora entum suscipit
+                    aenean rhoncus posuere odio in tincidunt. Proin
+                    iaculis purus consequat sem cure digni
+                    ssim. Donec porttitora entum suscipit.</div>
+            </div>
+            <div class="month left padding-left">
+                <img  class="month__img--left" src="img/about2.jpg" alt="">
+                <div class="month__title left">January 2011</div>
+                <div class="month__under-title left">Facing Startup Battles
+                </div>
+                <div class="month__text left">Proin iaculis purus consequat sem cure
+                    digni ssim. Donec porttitora entum suscipit
+                    aenean rhoncus posuere odio in tincidunt. Proin
+                    iaculis purus consequat sem cure digni
+                    ssim. Donec porttitora entum suscipit aenean
+                    rhoncus posuere odio in tincidu</div>
+            </div>
+            <div class="right month padding-right">
+                <img class="month__img--right" src="img/about3.jpg" alt="">
+                <div class="month__title right">
+                    July 2010
+                </div>
+                <div class="month__under-title right">Our Humble Beginnings</div>
+                <div class="month__text right">Proin iaculis purus consequat sem cure
+                    digni ssim. Donec porttitora entum suscipit
+                    aenean rhoncus posuere odio in tincidunt. Proin
+                    iaculis purus consequat sem cure digni
+                    ssim. Donec porttitora entum suscipit.</div>
+            </div>
+            <div class="month left padding-left">
+                <img  class="month__img--left" src="img/about4.jpg" alt="">
+                <div class="month__title left">January 2011</div>
+                <div class="month__under-title left">Facing Startup Battles
+                </div>
+                <div class="month__text left">Proin iaculis purus consequat sem cure
+                    digni ssim. Donec porttitora entum suscipit
+                    aenean rhoncus posuere odio in tincidunt. Proin
+                    iaculis purus consequat sem cure digni
+                    ssim. Donec porttitora entum suscipit aenean
+                    rhoncus posuere odio in tincidu</div>
+            </div>
+            <div class="copyrite">
+                &copy Copyright 2014 FreebiesXpress.com
+            </div>
+        </div>
+    </section>
 </body>
 </html>
